# quark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  build.cmake  flake.nix  options.cmake
.github/workflows/: cmake-multi-platform.yml
common/lib/: argparse.cmake  glad.cmake  glfw.cmake  glm.cmake  quill.cmake
core/: CMakeLists.txt  build.cmake
core/src/: quark.cxx  quark.ixx  quark.mxx
core/src/config/: os.ixx
core/src/log/: loggers.ixx  module.ixx
core/src/render/: gl.ixx  module.ixx  scene.ixx  window.cxx  window.ixx
core/src/utility/: clock.ixx
graphics/: build.cmake
graphics/src/: gl.ixx  module.ixx  scene.ixx  window.ixx
src/: quark.cxx  quark.ixx
src/config/: directories.ixx  module.ixx
src/utility/: module.ixx
tests/: CMakeLists.txt
tests/game/: build.cmake  game.ixx  main.cxx
tests/game/scenes/: hello.ixx  module.ixx
